--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "countup": "^1.8.2",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "postcss": "^8.5.6",
