--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "countup": "^1.8.2",
@@ -19,6 +20,7 @@
     "next": "15.4.6",
     "query-string": "^9.2.2",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
