--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.17",
