--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "countup": "^1.8.2",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "query-string": "^9.2.2",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
@@ -29,6 +30,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.17",
