--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "appwrite": "^18.1.1",
     "chart.js": "^4.5.0",
@@ -45,6 +46,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "node-appwrite": "^17.2.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "tw-animate-css": "^1.3.6",
