--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "countup": "^1.8.2",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
@@ -28,6 +29,7 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
