--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^24.2.1",
+    "@types/intl": "^1.2.2",
+    "@types/node": "^24.3.0",
     "@types/query-string": "^6.2.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -52,6 +53,6 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
