--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
+    "pino": "^9.9.0",
     "query-string": "^9.2.2",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
@@ -44,6 +45,7 @@
     "@eslint/eslintrc": "^3",
     "@types/intl": "^1.2.2",
     "@types/node": "^24.3.0",
+    "@types/pino": "^7.0.4",
     "@types/query-string": "^6.2.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
