--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "countup": "^1.8.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
-    "next": "15.4.6",
+    "next": "^15.5.0",
     "next-themes": "^0.4.6",
     "pino": "^9.9.0",
     "query-string": "^9.2.2",
@@ -53,7 +53,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.14",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "^15.5.0",
     "node-appwrite": "^17.2.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
